# shvapp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: appnode.rs  client.rs  connection.rs  db.rs  frame.rs  lib.rs  parse.rs  server.rs  shvfsnode.rs  shvjournal.rs  shvlog.rs  shvnode.rs  shvtree.rs  utils.rs
src/cmd/: mod.rs  publish.rs  rpccall.rs  set.rs  subscribe.rs  unknown.rs
tests/shvjournal/: 2k7-rows.log2  5k-rows.log2  corrupted1.log2  oneline.log2
