[package]
name = "shvapp"
version = "0.1.0"
authors = ["Fanda Vacek <fanda.vacek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
colored = "1.9.3"
structopt = "0.3.14"
chrono = "0.4"
async-std = { version = "1.10.0", features = ["unstable"] }
futures = "0.3.17"
atoi = "0.3.2"
bytes = "0.6.0"
rand = "0.7.3"
#async-trait = "0.1.42"
dirs = "3.0.1"
sha-1 = "0.9.4"
hex = "0.4.2"
#lz4_flex = "0.7.5"
#lz4-compress = "0.1.1"
lz-fear = "0.1.1"

chainpack = { path = "../chainpack" }

[[bin]]
name = "shvagent"

