[package]
name = "shvapp"
version = "0.1.0"
authors = ["Fanda Vacek <fanda.vacek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
time = "0.3.4"
colored = "2.0.0"
structopt = "0.3.14"
chrono = "0.4.22"
regex = "1.5"
bitflags = "1.3"

async-std = { version = "1.10.0", features = ["unstable"] }
async-broadcast = "0.4.1"

futures = "0.3.17"
atoi = "1.0.0"
bytes = "1.2.1"
rand = "0.8.5"
#async-trait = "0.1.42"
dirs = "4.0.0"
sha-1 = "0.10.0"
hex = "0.4.2"
#lz4_flex = "0.7.5"
#lz4-compress = "0.1.1"
lz-fear = "0.1.1"
#env_logger = "0.9"
flexi_logger = { version = "0.23.2" }

shvlog = { git = "https://github.com/silicon-heaven/shvlog-rs", branch = "master" }
chainpack = { git = "https://github.com/silicon-heaven/chainpack-rs", branch = "master" }

[[bin]]
name = "shvagent"

[[bin]]
name = "shvcall"

